--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,13 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: rianadon
+      url-base: https://github.com/rianadon
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: rianadon
       revision: main
       import: app/west.yml
   self:
     path: config
+    import: deps.yml
