--- a/boards/shields/cosmotyl/cosmotyl.dtsi
+++ b/boards/shields/cosmotyl/cosmotyl.dtsi
@@ -1,6 +1,7 @@
 #include <behaviors.dtsi>
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <dt-bindings/zmk/keys.h>
+#include "cosmotyl_layouts.dtsi"
 
 // Tell VIK that there is 1 other device on the SPI bus.
 // You will need to increase this number if you add another SPI device.
@@ -26,7 +27,7 @@
 / {
     chosen {
         zmk,kscan = &kscan0;
-        zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &layout;
     };
 
     default_transform: keymap_transform_0 {
