--- a/build.yaml
+++ b/build.yaml
@@ -2,7 +2,8 @@
 include:
   - board: cosmos_lemon_wireless
     shield: cosmotyl_left
-    snippet: zmk-usb-logging
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_RGB_UNDERGLOW=y -DCONFIG_ZMK_STUDIO_LOCKING=n
   - board: cosmos_lemon_wireless
     shield: cosmotyl_right
     snippet: zmk-usb-logging
