--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,5 @@ include:
   - board: cosmos_lemon_wireless
     shield: cosmotyl_right
     snippet: zmk-usb-logging
+  - board: cosmos_lemon_wireless
+    shield: settings_reset
