--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,8 @@ include:
   - board: corne_min_left
     shield: rgbled_adapter
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n -DCONFIG_BT_CTLR_PHY_2M=n
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n -DCONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
   - board: corne_min_right
     shield: rgbled_adapter
+    cmake-args: -DCONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
