--- a/build.yaml
+++ b/build.yaml
@@ -7,6 +7,6 @@ include:
   - board: cosmos_lemon_wireless
     shield: cosmotyl_right
     snippet: zmk-usb-logging
-    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y
+    cmake-args: -DCONFIG_ZMK_RGB_UNDERGLOW=y -DCONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=25
   - board: cosmos_lemon_wireless
     shield: settings_reset
